# cv_labs

./: .gitignore  CMakeLists.txt  README.md  main.cpp
1/: lab1.cpp  lab1.h
2/: lab2.cpp  lab2.h
3/: lab3.cpp  lab3.h  lab3_3.cpp  lab3_3.h
3/Dima/: lab3_1.cpp  lab3_4.cpp
3/Task/: .~lock.ЛАБОРАТОРНАЯ РАБОТА 3(17).docx#
3/Tasks/: ЛАБОРАТОРНАЯ РАБОТА 3(17).docx
3/Димон/: lab3_1.cpp  lab3_2.cpp  lab3_3.cpp  lab3_4.cpp
4/: LABORATORNAYa_RABOTA_4_10.docx  Source.cpp  Vlad_Fourier.cpp  lab4.cpp  lab4.h  Димон_Fourier.cpp
8th_term/: 8th_term_cv_labs.pro  CMakeLists.txt  cv_labs.pro  main.cpp
8th_term/5/: Vikas_lab5.cpp  calib_1.avi  lab5.cpp  lab5.h  lab5_class.cpp  lab5_class.h  makary_lab5.cpp
8th_term/6/: lab6.h  lab6_class.cpp  lab6_class.h  lab6_class_coins.cpp  lab6_class_lines.cpp  lab6_class_lines.h  lab6_class_thrash.cpp  lines.cpp  lines.h
8th_term/Aruco/: aruco_lab.cpp  detect_markers.cpp  lab_aruco.cpp  lab_aruco.h  samples.hpp
8th_term/Aruco/completeArchivArucoLab/: calibration.xml  detector_params.yml  myDetectionsCube.cpp
Task/: ЛАБОРАТОРНАЯ РАБОТА 3(17)(1).docx  ЛАБОРАТОРНАЯ РАБОТА 3(17).docx
